# sad64

./: Cargo.toml  README.md  assemble-tests.sh
examples/: disasm.rs
src/: decode.rs  format.rs  lib.rs  main.rs  mnemonic.rs  msr.rs  operand.rs  util.rs
src/decode/: branch.rs  data_reg.rs  imm.rs  ldst.rs  mod.rs  simd.rs
tests/: branch.S  dataproc.S  imm.S  ldst.S  ldst_simd.S  simd.S
