[package]
name = "sad64"
version = "0.1.0"
edition = "2021"
authors = ["Mark Poliakov <mark@alnyan.me>"]

[[example]]
name = "disasm"

[dependencies]
bitmatch = "0.1.1"

[dev-dependencies]
elf = "0.7.4"
rangemap = "1.5.1"

[features]
default = ["std", "format", "simd"]
std = []
format = []
simd = []
